--- a/client/vite-project/src/components/DBcomponent/DBcomponent.css
+++ b/client/vite-project/src/components/DBcomponent/DBcomponent.css
@@ -7,22 +7,46 @@
   table {
     width: 100%;
     border-collapse: collapse;
+  
+  }
+  .tableb{
+    margin: 25px;
   }
   
   th, td {
+    width: 50%;
     padding: 8px;
     text-align: left;
-    border-bottom: 1px solid #ddd;
+    border: 1px solid #ddd;
+    
   }
   
   th {
     background-color: #f2f2f2;
   }
   
-  /* Styles for the loading message */
   .loading {
     margin-top: 20px;
     font-style: italic;
     color: #888;
   }
+  .link-button {
+    display: inline-block;
+    margin-left: 30px;
+    padding: 10px 20px;
+    background-color: #28a745; /* Green color */
+    color: white;
+    text-decoration: none;
+    border-radius: 4px;
+    border: none;
+    cursor: pointer;
+  }
   
+  .link-button:hover {
+    background-color: #218838; /* Darker green color on hover */
+  }
+  
+  .link-button:focus {
+    outline: none;
+    box-shadow: 0 0 0 3px rgba(40, 167, 69, 0.5); /* Green shadow on focus */
+  }
