Added Update and Delete in client

--- a/client/vite-project/src/components/DBcomponent/DBcomponent.css
+++ b/client/vite-project/src/components/DBcomponent/DBcomponent.css
@@ -41,6 +41,17 @@
     border: none;
     cursor: pointer;
   }
+  .link-button2 {
+    display: inline-block;
+    margin-left: 30px;
+    padding: 10px 20px;
+    background-color: #ff002f; 
+    color: white;
+    text-decoration: none;
+    border-radius: 4px;
+    border: none;
+    cursor: pointer;
+  }
   
   .link-button:hover {
     background-color: #218838; /* Darker green color on hover */
